--- a/kubernetes/monitoring/prometheus.yml.j2
+++ b/kubernetes/monitoring/prometheus.yml.j2
@@ -4,5 +4,4 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets:
-        - 192.168.0.14:9100
-        - 192.168.0.15:9100
+        - ipaddress:9100
